# qtrex

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Makefile  README.md  RELEASE.MD  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  sast.yaml
license-templates/: LICENSE.txt
qtrex/: __init__.py  config.py  errors.py  executor.py  models.py  renderer.py  store.py
tests/: __init__.py  conftest.py  example.py  example.yaml  test_config.py  test_errors.py  test_executor.py  test_models.py  test_renderer.py  test_store.py
tests/testdata/: mytemplate.sql  nested_params.sql
tests/testdata/ingest/: another_file_ext.j2  another_query.sql
