# Copyright 2022 Bradley Bonitatibus

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#    http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
authors = [
  {name = "Bradley Bonitatibus", email = "bradleybonitatibus@gmail.com"},
]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries",
]
description = "Query template rendering and execution library"
license = {text = "Apache-2.0"}
name = "qtrex"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.4"

[options]
install_requires = [
  "pandas==1.5.0",
  "PyYAML==6.0",
]

[project.urls]
Documentation = "https://github.com/bradleybonitatibus/qtrex"
Homepage = "https://github.com/bradleybonitatibus/qtrex"
Repository = "https://github.com/bradleybonitatibus/qtrex"

[tool.setuptools.packages.find]
include = ["qtrex*"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ['setuptools', "setuptools-scm"]
